--- a/VTiger/test-output/index.html
+++ b/VTiger/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse-2005487456\testng-customsuite.xml</span>
+                    <span>C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse--200989443\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -130,14 +130,14 @@
                   <a name="createContact">
                   </a> <!-- createContact -->
                   <span class="method-name">createContact</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [b] but found [a]
+                  <div class="stack-trace">java.lang.AssertionError: expected [p] but found [l]
 	at org.testng.Assert.fail(Assert.java:99)
 	at org.testng.Assert.failNotEquals(Assert.java:1037)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
 	at org.testng.Assert.assertEquals(Assert.java:122)
 	at org.testng.Assert.assertEquals(Assert.java:629)
 	at org.testng.Assert.assertEquals(Assert.java:639)
-	at com.Vtiger.comContacts.xml.TC_01createContact.createContact(TC_01createContact.java:30)
+	at com.Vtiger.comContacts.xml.TC_01createContact.createContact(TC_01createContact.java:31)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -175,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse-2005487456\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse--200989443\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -236,12 +236,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createContact')
 data.setCell(0, 2, 'com.Vtiger.comContacts.xml.TC_01createContact')
-data.setCell(0, 3, 18365);
+data.setCell(0, 3, 13735);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -274,29 +274,29 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">launchBrowser(chrome)</span>
-                <span class="method-start">43 ms</span>
+                <span class="method-start">38 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">login</span>
-                <span class="method-start">6176 ms</span>
+                <span class="method-start">5107 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">createContact</span>
-                <span class="method-start">11980 ms</span>
+                <span class="method-start">12724 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logout</span>
-                <span class="method-start">30655 ms</span>
+                <span class="method-start">26752 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">32686 ms</span>
+                <span class="method-start">28691 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">closeDB</span>
-                <span class="method-start">32874 ms</span>
+                <span class="method-start">28941 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
