--- a/VTiger/test-output/old/Default suite/groups.html
+++ b/VTiger/test-output/old/Default suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoketest</td><td>TC_01createContact.createContact()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
