--- a/VTiger/test-output/old/Default suite/methods.html
+++ b/VTiger/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75b1fb">  <td>21/10/15 20:35:46</td>   <td>0</td> <td title="&gt;&gt;BaseClass.connectDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">&gt;&gt;connectDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1270144618</td>   <td></td> </tr>
-<tr bgcolor="75b1fb">  <td>21/10/15 20:35:46</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1270144618</td>   <td></td> </tr>
-<tr bgcolor="75b1fb">  <td>21/10/15 20:36:14</td>   <td>28691</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1270144618</td>   <td></td> </tr>
-<tr bgcolor="75b1fb">  <td>21/10/15 20:36:13</td>   <td>26752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>main@1270144618</td>   <td></td> </tr>
-<tr bgcolor="75b1fb">  <td>21/10/15 20:35:51</td>   <td>5115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@1270144618</td>   <td></td> </tr>
-<tr bgcolor="75b1fb">  <td>21/10/15 20:36:15</td>   <td>28941</td> <td title="&lt;&lt;BaseClass.closeDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">&lt;&lt;closeDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1270144618</td>   <td></td> </tr>
-<tr bgcolor="e2dbf3">  <td>21/10/15 20:35:59</td>   <td>12724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01createContact.createContact()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@1fc2b765]">createContact</td> 
-  <td>main@1270144618</td>   <td></td> </tr>
+<tr bgcolor="75b1fb">  <td>21/10/17 20:12:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="75b1fb">  <td>21/10/17 20:12:26</td>   <td>221</td> <td title="&lt;&lt;BaseClass.closeDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">&lt;&lt;closeDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="75b1fb">  <td>21/10/17 20:11:41</td>   <td>-44690</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="75b1fb">  <td>21/10/17 20:11:46</td>   <td>-39845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="75b1fb">  <td>21/10/17 20:11:41</td>   <td>-44733</td> <td title="&gt;&gt;BaseClass.connectDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">&gt;&gt;connectDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="75b1fb">  <td>21/10/17 20:12:24</td>   <td>-2148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="e2dbf3">  <td>21/10/17 20:11:53</td>   <td>-33210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05CreateContact2.executingTestCase()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@7403c468]">executingTestCase</td> 
+  <td>main@1151593579</td>   <td></td> </tr>
 </table>
