--- a/VTiger/test-output/old/Default suite/classes.html
+++ b/VTiger/test-output/old/Default suite/classes.html
@@ -4,15 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Vtiger.comContacts.xml.TC_05CreateContact2</td>
+<td>com.Vtiger.comContacts.xml.TC_01createContact</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>executingTestCase</td>
-<td>&nbsp;</td></tr>
+<td>createContact</td>
+<td>smoketest </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
