--- a/VTiger/test-output/index.html
+++ b/VTiger/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse-809732262\testng-customsuite.xml</span>
+                    <span>C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse-1801679335\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Vtiger.comContacts.xml.TC_01createContact" hash-for-method="createContact">createContact</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Vtiger.comContacts.xml.TC_02createContact" hash-for-method="executingTestCase">executingTestCase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.Vtiger.comContacts.xml.TC_01createContact</span>
+              <span class="class-name">com.Vtiger.comContacts.xml.TC_02createContact</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createContact">
-                  </a> <!-- createContact -->
-                  <span class="method-name">createContact</span>
+                  <a name="executingTestCase">
+                  </a> <!-- executingTestCase -->
+                  <span class="method-name">executingTestCase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse-809732262\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SOHAN\AppData\Local\Temp\testng-eclipse-1801679335\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.Vtiger.comContacts.xml.TC_01createContact&quot;/&gt;
+      &lt;class name=&quot;com.Vtiger.comContacts.xml.TC_02createContact&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -170,14 +170,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">smoketest</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">createContact</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -196,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createContact')
-data.setCell(0, 2, 'com.Vtiger.comContacts.xml.TC_01createContact')
-data.setCell(0, 3, 16545);
+data.setCell(0, 1, 'executingTestCase')
+data.setCell(0, 2, 'com.Vtiger.comContacts.xml.TC_02createContact')
+data.setCell(0, 3, 22985);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -229,34 +221,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.Vtiger.comContacts.xml.TC_01createContact</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.Vtiger.comContacts.xml.TC_02createContact</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">connectDB</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">launchBrowser(chrome)</span>
-                <span class="method-start">553 ms</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">login</span>
-                <span class="method-start">6582 ms</span>
+                <span class="method-start">6020 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createContact</span>
-                <span class="method-start">13719 ms</span>
+                <span class="method-name">executingTestCase</span>
+                <span class="method-start">13280 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logout</span>
-                <span class="method-start">30278 ms</span>
+                <span class="method-start">36270 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">32113 ms</span>
+                <span class="method-start">38200 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">closeDB</span>
-                <span class="method-start">32973 ms</span>
+                <span class="method-start">38541 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
