--- a/VTiger/test-output/old/Default suite/classes.html
+++ b/VTiger/test-output/old/Default suite/classes.html
@@ -4,45 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Vtiger.comContacts.xml.TC_02createContact</td>
+<td>crickBuzz.CrickBuzzz</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>executingTestCase</td>
+<td>crick</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>launchBrowser</td>
-<td>smoketest </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>login</td>
-<td>smoketest </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>logout</td>
-<td>smoketest </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>smoketest </td>
 </tr>
 </table>
