--- a/VTiger/test-output/old/Default suite/methods.html
+++ b/VTiger/test-output/old/Default suite/methods.html
@@ -1,18 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="709393">  <td>21/10/27 11:52:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>21/10/27 11:51:58</td>   <td>-6014</td> <td title="&gt;&gt;BaseClass.connectDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">&gt;&gt;connectDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>21/10/27 11:52:34</td>   <td>30250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>21/10/27 11:52:36</td>   <td>32180</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="e088a9">  <td>21/10/27 11:52:11</td>   <td>7259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02createContact.executingTestCase()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">executingTestCase</td> 
-  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>21/10/27 11:51:58</td>   <td>-5966</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
-<tr bgcolor="709393">  <td>21/10/27 11:52:36</td>   <td>32520</td> <td title="&lt;&lt;BaseClass.closeDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@396e2f39]">&lt;&lt;closeDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109874862</td>   <td></td> </tr>
+<tr bgcolor="ef968d">  <td>21/12/09 12:45:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CrickBuzzz.crick()[pri:0, instance:crickBuzz.CrickBuzzz@371a67ec]">crick</td> 
+  <td>main@1218593486</td>   <td></td> </tr>
 </table>
