--- a/VTiger/test-output/old/Suite/methods.html
+++ b/VTiger/test-output/old/Suite/methods.html
@@ -1,28 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:04:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@c81cdd1]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@278108895</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:06:26</td>   <td>91996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@c81cdd1]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@278108895</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>21/10/09 18:05:49</td>   <td>54618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01createContact.createContact()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@c81cdd1]">createContact</td> 
-  <td>TestNG-tests-1@278108895</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:04:40</td>   <td>-14806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@c81cdd1]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@278108895</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:06:33</td>   <td>98937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@c81cdd1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@278108895</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:04:40</td>   <td>-14806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@821973729</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>21/10/09 18:05:32</td>   <td>37195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01createContact.createContact()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">createContact</td> 
-  <td>TestNG-tests-2@821973729</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:06:27</td>   <td>92551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@821973729</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:06:34</td>   <td>99154</td> <td title="&lt;&lt;BaseClass.closeDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">&lt;&lt;closeDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:05:22</td>   <td>27576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@821973729</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:04:40</td>   <td>-14862</td> <td title="&gt;&gt;BaseClass.connectDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">&gt;&gt;connectDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
-<tr bgcolor="b8fe70">  <td>21/10/09 18:06:31</td>   <td>96153</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@4c762604]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@821973729</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:14:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@7e0e6aa2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1800733838</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:52</td>   <td>-125930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@7e0e6aa2]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1800733838</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:14:50</td>   <td>-7900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@7e0e6aa2]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1800733838</td>   <td></td> </tr>
+<tr bgcolor="e088a9">  <td>21/11/30 11:13:20</td>   <td>-97676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01createContact.createContact()[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@7e0e6aa2]">createContact</td> 
+  <td>TestNG-tests-1@1800733838</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:31</td>   <td>-147028</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_01createContact@7e0e6aa2]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1800733838</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:28</td>   <td>-149626</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@7a36aefa]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@903917087</td>   <td></td> </tr>
+<tr bgcolor="71946a">  <td>21/11/30 11:13:22</td>   <td>-96148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02createContact.executingTestCase()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@7a36aefa]">executingTestCase</td> 
+  <td>TestNG-tests-2@903917087</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:55</td>   <td>-123263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@7a36aefa]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@903917087</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:14:50</td>   <td>-7839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@7a36aefa]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@903917087</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:14:58</td>   <td>-364</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_02createContact@7a36aefa]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@903917087</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:14:59</td>   <td>624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_03CreateContact@6fb0d3ed]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@874850110</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:55</td>   <td>-122991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_03CreateContact@6fb0d3ed]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@874850110</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:15:03</td>   <td>4838</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_03CreateContact@6fb0d3ed]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@874850110</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:28</td>   <td>-149625</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_03CreateContact@6fb0d3ed]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@874850110</td>   <td></td> </tr>
+<tr bgcolor="e18270">  <td>21/11/30 11:13:21</td>   <td>-96875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03CreateContact.executingTestCase()[pri:0, instance:com.Vtiger.comContacts.xml.TC_03CreateContact@6fb0d3ed]">executingTestCase</td> 
+  <td>TestNG-tests-3@874850110</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:28</td>   <td>-149626</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_04CreateContact@68ceda24]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-4@785195634</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:50</td>   <td>-127988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_04CreateContact@68ceda24]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-4@785195634</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:15:05</td>   <td>6777</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_04CreateContact@68ceda24]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-4@785195634</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:14:59</td>   <td>986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_04CreateContact@68ceda24]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-4@785195634</td>   <td></td> </tr>
+<tr bgcolor="b1d79b">  <td>21/11/30 11:13:22</td>   <td>-96118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04CreateContact.executingTestCase()[pri:0, instance:com.Vtiger.comContacts.xml.TC_04CreateContact@68ceda24]">executingTestCase</td> 
+  <td>TestNG-tests-4@785195634</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:15:15</td>   <td>17105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-5@1418649770</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:28</td>   <td>-149626</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-5@1418649770</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:28</td>   <td>-149773</td> <td title="&gt;&gt;BaseClass.connectDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">&gt;&gt;connectDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480971771</td>   <td></td> </tr>
+<tr bgcolor="7c896d">  <td>21/11/30 11:13:23</td>   <td>-95100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05CreateContact2.executingTestCase()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">executingTestCase</td> 
+  <td>TestNG-tests-5@1418649770</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:15:19</td>   <td>20536</td> <td title="&lt;&lt;BaseClass.closeDB()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">&lt;&lt;closeDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480971771</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:12:55</td>   <td>-122980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-5@1418649770</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>21/11/30 11:15:18</td>   <td>20327</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.Vtiger.comContacts.xml.TC_05CreateContact2@4516af24]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-5@1418649770</td>   <td></td> </tr>
 </table>
