--- a/VTiger/test-output/old/Suite/toc.html
+++ b/VTiger/test-output/old/Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>2 methods:<br/>
+<td>5 tests</td>
+<td><a target='mainFrame' href='classes.html'>5 classes</a></td>
+<td>5 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,16 +22,40 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestRunner-Chrome (1/0/0)</td><td valign='top' align='right'>
-  <a href='TestRunner-Chrome.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>TestRunner1 (1/0/0)</td><td valign='top' align='right'>
+  <a href='TestRunner1.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestRunner-Firefox (1/0/0)</td><td valign='top' align='right'>
-  <a href='TestRunner-Firefox.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>TestRunner2 (1/0/0)</td><td valign='top' align='right'>
+  <a href='TestRunner2.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestRunner3 (1/0/0)</td><td valign='top' align='right'>
+  <a href='TestRunner3.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestRunner4 (1/0/0)</td><td valign='top' align='right'>
+  <a href='TestRunner4.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestRunner5 (1/0/0)</td><td valign='top' align='right'>
+  <a href='TestRunner5.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
